<resources>
    <string name="app_name">MyMovieCatalogue</string>
    <string name="discover">Discover</string>
    <string name="tmdb">TMDB</string>
    <string name="poster">Poster</string>
    <string name="desc_spiderman">Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</string>
    <string name="genre_arrow">Crime, Drama, Mystery, Action &amp; Adventure</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>
    <string name="latest">Latest</string>
    <string name="on_the_air">On The Air</string>
    <string name="favorite">Favorite</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="saved_to_favorite">Item has been added to favorite</string>
    <string name="removed_from_favorite">Item has been removed from favorite</string>
    <string name="warning_tv">Oops you haven\'t got any favorite tv shows yet</string>
    <string name="warning_movie">Oops you haven\'t got any favorite movies yet</string>
</resources>